# genat_iso_parser

./: LICENSE  README.md  pyproject.toml  setup.py  test.py
genat_iso_parser.egg-info/: SOURCES.txt
resources/: ISO_0.json  ISO_1.json
src/genat_iso_parser/: Iso.py  exceptions.py
src/genat_iso_parser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/iso_res/: ISO_1.json
tests/: test.py
