[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genat_iso_parser"
version = "3.0"
authors = [
  { name="Nathnael Fikru", email="natfik2020@gmail.com" },
]
description = "An iso message bulk parser"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]